change(web): world tab & many changes

--- a/web/package.json
+++ b/web/package.json
@@ -13,8 +13,10 @@
     "@babel/core": "^7.19.1",
     "@emotion/react": "^11.10.4",
     "@mantine/core": "^5.4.1",
+    "@mantine/dates": "^5.4.1",
     "@mantine/hooks": "^5.4.1",
     "@mantine/modals": "^5.4.1",
+    "dayjs": "^1.11.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
