fix(github): add browser.js (for url buttons)

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -69,6 +69,7 @@ jobs:
           cp ./{LICENSE,README.md,fxmanifest.lua,config.lua} ./temp/dolu_tool
           cp -r ./{client,locales,server,shared} ./temp/dolu_tool
           cp -r ./web/build ./temp/dolu_tool/web/
+          cp ./web/browser.js ./temp/dolu_tool/web/
           cd ./temp && zip -r ../dolu_tool.zip ./dolu_tool
 
       - name: Create Release
