--- a/web/package.json
+++ b/web/package.json
@@ -31,7 +31,37 @@
     "@types/react-dom": "^18.0.10",
     "@types/three": "^0.144.0",
     "@vitejs/plugin-react": "^1.3.2",
+    "@types/node": "^16.11.18",
     "typescript": "^4.9.4",
-    "vite": "^2.9.15"
+    "vite": "^2.9.15",
+    "cross-env": "^7.0.3",
+    "prettier": "^2.8.1",
+    "rimraf": "^3.0.2"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ],
+    "rules": {
+      "react-hooks/rules-of-hooks": "off"
+    }
+  },
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
