--- a/web/package.json
+++ b/web/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@babel/core": "^7.20.12",
     "@emotion/react": "^11.10.5",
+    "@mantine/carousel": "^5.10.1",
     "@mantine/core": "^5.10.0",
     "@mantine/dates": "^5.10.0",
     "@mantine/hooks": "^5.10.0",
@@ -19,6 +20,7 @@
     "@react-three/drei": "^9.52.6",
     "@react-three/fiber": "^8.10.0",
     "dayjs": "^1.11.7",
+    "embla-carousel-react": "^7.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
@@ -27,16 +29,16 @@
     "three": "^0.145.0"
   },
   "devDependencies": {
+    "@types/node": "^16.11.18",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "@types/three": "^0.144.0",
     "@vitejs/plugin-react": "^1.3.2",
-    "@types/node": "^16.11.18",
-    "typescript": "^4.9.4",
-    "vite": "^2.9.15",
     "cross-env": "^7.0.3",
     "prettier": "^2.8.1",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "typescript": "^4.9.4",
+    "vite": "^2.9.15"
   },
   "eslintConfig": {
     "extends": [
