feat(web): force people to use built ui
Looks like people like to not read doc correctly.
This will throw errors in both server/client console if UI is not built.
This will also throw an error if people try to build using yarn since ThreeJS lib cant work for both 'pnpm' and 'yarn' without adjustments.

--- a/web/package.json
+++ b/web/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "vite",
     "start:game": "vite build --watch",
-    "build": "tsc && vite build",
+    "build": "node build.js",
     "preview": "vite preview"
   },
   "dependencies": {
