--- a/web/package.json
+++ b/web/package.json
@@ -21,22 +21,22 @@
     "dayjs": "^1.11.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.7.1",
+    "react-icons": "^4.9.0",
     "react-router-dom": "^6.6.2",
     "recoil": "^0.7.6",
     "three": "^0.145.0"
   },
   "devDependencies": {
+    "@types/node": "^16.11.18",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "@types/three": "^0.144.0",
     "@vitejs/plugin-react": "^1.3.2",
-    "@types/node": "^16.11.18",
-    "typescript": "^4.9.4",
-    "vite": "^2.9.15",
     "cross-env": "^7.0.3",
     "prettier": "^2.8.1",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "typescript": "^4.9.4",
+    "vite": "^2.9.15"
   },
   "eslintConfig": {
     "extends": [
